# kourt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
agent/: agent.py  config.py  preparation.py  requirements.txt
agent/agent/: agent.py  config.py  execution.py  test-suite-schema.yml  validation.py
agent/test/: test_config.py
problems/: test-scenario-schema.yaml
problems/sum-numbers/: description.md
problems/sum-numbers/correct-solutions/: reference-solution.c
problems/sum-numbers/test-scenarios/: scenario.yml
problems/sum-numbers/wrong-solutions/: crash.c  read-stdin-without-cycle.c
runner/: CMakeLists.txt  README.md  main.cpp
runner/src/: elf.cpp  interceptors.cpp  interceptors.h  logging.cpp  logging.h  main.cpp  read_size_shrink_interceptor.cpp  read_size_shrink_interceptor.h  runner_main.cpp  syscall_registers_manipulator.x64.cpp  tracee.h  tracee_controller.cpp  tracee_controller.h  tracing.cpp  tracing.h  tracing.x86-64.cpp
runner/src/include/kourt/runner/: assert.h  config.h  defer.h  elf.h  logging.h  read_size_shrink_interceptor.h  runner_main.h  tracing.h
runner/test/: functional_tests.cpp  runner_tests.py
test/: test_problems.py
